# cpp-project

./: .gitmodules  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/cpp_project/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/cpp_project/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cpp_project/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
